# CI-CD_DEMO

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: CD.yml  CI.yml
tests/: test_main.py
