[tool.poetry]
name = "fastapi-cicd-demo"
version = "0.1.0"
description = "A simple FastAPI app for CI/CD demo"
authors = ["phungoteq <phungo@teqnological.asia>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
httpx = "^0.26.0"
black = "^24.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"